cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug214184.cpp
class CTypeInteger {
public:
  CTypeInteger *clone() const override { return new CTypeInteger(*this); }
};